<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.navpage.NavActivity">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:id="@+id/topLayout"
            android:background="@color/colorwhite"
            >
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/logo"
                android:id="@+id/img_logo"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/colorwhite"
            android:layout_below="@id/topLayout"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorblack"
                android:text="@string/txt_selected"
                android:textSize="16sp"
                android:fontFamily="@font/cairoblack"
                android:textAlignment="center"
                android:layout_alignParentTop="true"
                android:layout_marginTop="45dp"
                android:id="@+id/txt_selected"
                android:layout_marginBottom="15dp"
                />
            <Button
                android:layout_below="@id/txt_selected"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/colorBackground"
                android:layout_marginStart="13dp"
                android:id="@+id/btn_pat"
                android:layout_marginEnd="13dp"
                android:layout_marginTop="13dp"
                android:text="@string/txt_delivery"
                android:textColor="@color/colorwhite"
                android:fontFamily="@font/cairobold"
                />
            <Button
                android:layout_below="@id/btn_pat"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/colorBackground"
                android:layout_marginStart="13dp"
                android:id="@+id/btn_doc"
                android:layout_marginEnd="13dp"
                android:layout_marginTop="13dp"
                android:text="@string/txt_user"
                android:textColor="@color/colorwhite"
                android:fontFamily="@font/cairobold"
                />
        </RelativeLayout>

    </RelativeLayout>
</layout>