<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="handlers"
            type="com.aaamab.delivery.vovo.ui.loginpage.LoginActivity.MyClickHandlers" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/doctorbg"
        tools:context=".ui.loginpage.LoginActivity">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_gravity="bottom"
            android:layout_height="wrap_content">
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/relCenter"
                android:layout_centerHorizontal="true"
                android:visibility="gone"
                android:id="@+id/pro_bar"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:elevation="10dp"
                android:id="@+id/relCenter"

                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:id="@+id/linAll"
                    >
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginStart="13dp"
                        app:cardCornerRadius="8dp"
                        android:layout_marginEnd="13dp"
                        android:layout_marginTop="13dp"
                        app:cardBackgroundColor="@color/colorwhite"
                        >
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layoutDirection="rtl"
                            android:layout_height="match_parent">

                            <EditText
                                android:inputType="textEmailAddress"
                                android:layout_width="match_parent"
                                android:drawablePadding="10dp"
                                android:paddingStart="10dp"
                                android:id="@+id/ed_emaillogin"
                                android:paddingEnd="10dp"
                                android:backgroundTint="@color/colorwhite"
                                android:layout_height="match_parent"
                                android:fontFamily="@font/cairoextralight"
                                android:hint="@string/txt_email" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginStart="13dp"
                        android:layout_marginEnd="13dp"
                        app:cardCornerRadius="8dp"
                        android:layout_marginTop="10dp"
                        app:cardBackgroundColor="@color/colorwhite"
                        >
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            app:passwordToggleEnabled="true"
                            android:layoutDirection="rtl"
                            app:passwordToggleTint="@color/colorBackground"
                            android:layout_height="match_parent">

                            <EditText
                                android:inputType="text"
                                android:layout_width="match_parent"
                                android:paddingStart="10dp"
                                android:paddingEnd="10dp"
                                android:drawablePadding="10dp"
                                android:autofillHints="@string/txt_pass"
                                android:id="@+id/ed_passlogin"
                                android:backgroundTint="@color/colorwhite"
                                android:layout_height="match_parent"
                                android:hint="@string/txt_pass"
                                android:fontFamily="@font/cairolight"
                                android:textColorHint="@color/colorBackground"
                                />
                        </com.google.android.material.textfield.TextInputLayout>
                    </androidx.cardview.widget.CardView>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@color/colorBackground"
                        android:layout_marginStart="13dp"
                        android:id="@+id/btn_login"
                        android:layout_marginEnd="13dp"
                        android:layout_marginTop="13dp"
                        android:text="@string/txt_login"
                        android:onClick="@{handlers.Login}"
                        android:textColor="@color/colorwhite"
                        android:fontFamily="@font/cairobold"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginStart="13dp"
                        android:layout_marginEnd="13dp"
                        android:layout_marginTop="13dp"
                        android:weightSum="2"
                        >
                        <CheckBox
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:textColor="#000"

                            android:gravity="end|center"
                            android:id="@+id/ch_rememberme"
                            android:fontFamily="@font/cairolight"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_remmemberme"/>
                        <TextView
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:id="@+id/forget_pass"
                            android:textColor="#000"
                            android:layoutDirection="rtl"
                            android:fontFamily="@font/cairolight"
                            android:text="@string/txt_forgetpass"/>
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:background="@color/colorPrimaryDark"
                        android:layout_marginTop="25dp"
                        android:layout_marginStart="13dp"
                        android:layout_marginEnd="13dp"
                        android:layout_marginBottom="10dp"
                        />
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="30dp"
                        android:background="@color/colorBackground"
                        android:layout_marginStart="13dp"
                        android:layout_marginEnd="13dp"
                        android:id="@+id/btn_createnew"
                        android:layout_marginBottom="15dp"
                        android:text="@string/txt_newacc"
                        android:onClick="@{handlers.Register}"
                        android:textColor="@color/colorwhite"
                        android:fontFamily="@font/cairobold"
                        />
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</layout>