<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="handlers"
            type="com.aaamab.delivery.vovo.ui.registerpage.RegisterActivity.MyClickHandlers" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/doctorbg"
        tools:context=".ui.loginpage.LoginActivity">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content">
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/relCenter"
                android:layout_centerHorizontal="true"
                android:visibility="gone"
                android:id="@+id/pro_bar"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layoutDirection="rtl"
                android:id="@+id/topRel"
                android:visibility="gone"
                android:layout_alignParentTop="true">
                <ImageView
                    android:id="@+id/img_upload"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:visibility="gone"
                    android:layout_centerInParent="true"
                    android:src="@drawable/logo" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:visibility="gone"
                    android:layout_below="@id/img_upload"
                    android:textColor="#000"
                    android:text="@string/txt_login"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="13dp"
                    android:layout_marginEnd="13dp"
                    android:visibility="gone"
                    android:background="@color/colorwhite"
                    android:elevation="10dp" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/topRel"
                android:elevation="10dp"
                android:id="@+id/relCenter"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:id="@+id/linAll"
                    >
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginStart="13dp"
                        app:cardCornerRadius="8dp"
                        android:layout_marginEnd="13dp"
                        android:layout_marginTop="13dp"
                        app:cardBackgroundColor="@color/colorwhite"
                        >
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layoutDirection="rtl"
                            android:layout_height="match_parent">

                            <EditText
                                android:inputType="text"
                                android:layout_width="match_parent"
                                android:drawablePadding="10dp"
                                android:paddingStart="10dp"
                                android:id="@+id/ed_name"
                                android:paddingEnd="10dp"
                                android:backgroundTint="@color/colorwhite"
                                android:layout_height="match_parent"
                                android:fontFamily="@font/cairolight"
                                android:hint="@string/txt_name" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginStart="13dp"
                        app:cardCornerRadius="8dp"
                        android:layout_marginEnd="13dp"
                        android:layout_marginTop="13dp"
                        app:cardBackgroundColor="@color/colorwhite"
                        >
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layoutDirection="rtl"
                            android:layout_height="match_parent">

                            <EditText
                                android:inputType="phone"
                                android:layout_width="match_parent"
                                android:drawablePadding="10dp"
                                android:paddingStart="10dp"
                                android:id="@+id/ed_phone"
                                android:paddingEnd="10dp"
                                android:backgroundTint="@color/colorwhite"
                                android:layout_height="match_parent"
                                android:fontFamily="@font/cairolight"
                                android:hint="@string/txt_phone" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginStart="13dp"
                        app:cardCornerRadius="8dp"
                        android:layout_marginEnd="13dp"
                        android:layout_marginTop="13dp"
                        app:cardBackgroundColor="@color/colorwhite"
                        >
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layoutDirection="rtl"
                            android:layout_height="match_parent">

                            <EditText
                                android:inputType="textEmailAddress"
                                android:layout_width="match_parent"
                                android:drawablePadding="10dp"
                                android:paddingStart="10dp"
                                android:id="@+id/ed_emaillogin"
                                android:paddingEnd="10dp"
                                android:backgroundTint="@color/colorwhite"
                                android:layout_height="match_parent"
                                android:fontFamily="@font/cairolight"
                                android:hint="@string/txt_email" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginStart="13dp"
                        android:layout_marginEnd="13dp"
                        app:cardCornerRadius="8dp"
                        android:layout_marginTop="10dp"
                        app:cardBackgroundColor="@color/colorwhite"
                        >
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            app:passwordToggleEnabled="true"
                            android:layoutDirection="rtl"
                            app:passwordToggleTint="@color/colorBackground"
                            android:layout_height="match_parent">

                            <EditText
                                android:layout_width="match_parent"
                                android:paddingStart="10dp"
                                android:paddingEnd="10dp"
                                android:drawablePadding="10dp"
                                android:id="@+id/ed_passregister"
                                android:backgroundTint="@color/colorwhite"
                                android:layout_height="match_parent"
                                android:fontFamily="@font/cairolight"
                                android:hint="@string/txt_pass" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginStart="13dp"
                        android:layout_marginEnd="13dp"
                        app:cardCornerRadius="8dp"
                        android:layout_marginTop="10dp"
                        app:cardBackgroundColor="@color/colorwhite"
                        >
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        app:passwordToggleEnabled="true"
                        android:layoutDirection="rtl"
                        app:passwordToggleTint="@color/colorBackground"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/ed_confirmPass"
                            android:layout_width="match_parent"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:drawablePadding="10dp"
                            android:backgroundTint="@color/colorwhite"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/cairolight"
                            android:hint="@string/txt_confirm" />
                    </com.google.android.material.textfield.TextInputLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginStart="13dp"
                        app:cardCornerRadius="8dp"
                        android:layout_marginEnd="13dp"
                        android:layout_marginTop="13dp"
                        app:cardBackgroundColor="@color/colorwhite"
                        >
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layoutDirection="rtl"
                            android:layout_height="match_parent">

                            <EditText
                                android:inputType="text"
                                android:layout_width="match_parent"
                                android:drawablePadding="10dp"
                                android:paddingStart="10dp"
                                android:id="@+id/ed_address"
                                android:paddingEnd="10dp"
                                android:backgroundTint="@color/colorwhite"
                                android:layout_height="match_parent"
                                android:fontFamily="@font/cairolight"
                                android:hint="@string/txt_address" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </androidx.cardview.widget.CardView>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@color/colorBackground"
                        android:layout_marginStart="13dp"
                        android:id="@+id/btn_login"
                        android:layout_marginEnd="13dp"
                        android:layout_marginTop="13dp"
                        android:text="@string/txt_newacc"
                        android:textSize="16sp"
                        android:textColor="@color/colorwhite"
                        android:fontFamily="@font/cairobold"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:background="@color/colorPrimaryDark"
                        android:layout_marginTop="25dp"
                        android:layout_marginStart="13dp"
                        android:layout_marginEnd="13dp"
                        android:layout_marginBottom="5dp"
                        />
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/colorBackground"
                        android:layout_marginStart="13dp"
                        android:layout_marginEnd="13dp"
                        android:id="@+id/btn_createnew"
                        android:layout_marginBottom="15dp"
                        android:textSize="16sp"
                        android:text="@string/txt_login"
                        android:onClick="@{handlers.Login}"
                        android:textColor="@color/colorwhite"
                        android:fontFamily="@font/cairobold"
                        />
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</layout>